--- a/07a_git.qmd
+++ b/07a_git.qmd
@@ -183,7 +183,7 @@ usethis::git_sitrep()
 • Default GitHub host: 'https://github.com'
 • Personal access token for 'https://github.com': <unset>
 • To create a personal access token, call `create_github_token()`
-• To store a token for current and future use, call `gitcreds::gitcreds_set()`
+• To store a token for current and future use, call `credentials::set_github_pat()`
 ℹ Read more in the 'Managing Git(Hub) Credentials' article:
   https://usethis.r-lib.org/articles/articles/git-credentials.html
 
@@ -379,7 +379,7 @@ usethis::git_sitrep()
 • Default GitHub host: 'https://github.com'
 • Personal access token for 'https://github.com': <unset>
 • To create a personal access token, call `create_github_token()`
-• To store a token for current and future use, call `gitcreds::gitcreds_set()`
+• To store a token for current and future use, call `credentials::set_github_pat()`
 ℹ Read more in the 'Managing Git(Hub) Credentials' article:
   https://usethis.r-lib.org/articles/articles/git-credentials.html
 
@@ -495,7 +495,7 @@ usethis::use_readme_md()
 
 ## Edit README
 
-Adapt the template, adding a short description about your project.
+Adapt the template, adding a short description about your project, including local links to your report and dataspice information page.
 
 I've added the following:
 
@@ -509,6 +509,8 @@ I've added the following:
 The goal of wood-survey is to analyse the relationship between stem diameter and height in NEON vegetation survey data.
 
 A report of our analysis can be found [here](report.html)
+
+Details about the data used can be found [here](data/index.html)
 ```
 
 Add and commit your new README
@@ -539,15 +541,23 @@ Once the repo is created and any commmited files pushed, the repo is launched in
 
 ![](assets/use-github.png)
 
-# Host html content on GitHub
+# Host HTML content on GitHub
 
 Let's head to the repo and have a look at what we've shared. To host our html content on GitHub, we need to **enable `gh-pages`** in our repository.
 
 ## Enable `gh-pages`
 
-Go to repo **Settings** and navigate to the **Pages** panel on the left hand side and change your settings to the following configuration: - **Source:** Deploy from a branch. - **Branch:** `master` - {{< fa folder >}} **Folder:** `/ (root)` - Ensure the *Enforce HTTPS* option is selected.
+Go to repo **Settings** and navigate to the **Pages** panel on the left hand side and change your settings to the following configuration:
 
-and **Save**{.btn .btn-primary}
+\- **Source:** Deploy from a branch.
+
+\- **Branch:** `master`
+
+\- {{< fa folder >}} **Folder:** `/ (root)`
+
+\- Ensure the ***Enforce HTTPS*** option is selected.
+
+and **Save**
 
 ![](assets/gh-pages-enable.png)
 
@@ -555,7 +565,7 @@ and **Save**{.btn .btn-primary}
 
 Once the site has been successfully deployed, you will see a message like this (you might need to refresh the page):
 
-!{[ ](assets/gh-pages-deployed.png)
+![](assets/gh-pages-deployed.png)
 
 Click on the link displayed and go check out your work!
 
@@ -567,7 +577,7 @@ Note that my URL looks a bit different to yours. That's because I'm redirecting 
 
 The landing page of your site will be the `README.md` file (although you could override this if the root of your project contained a `index.md` or `index.html` file).
 
-![](assets/gh-pages-landing-page.png) From there you can click through to the rendered report page (or you can add `/report.html` to the end of the URL to go directly to the report).
+![](assets/gh-pages-landing-page.png) From there you can click through to the rendered report page (or you can add `/report.html` to the end of the URL to go directly to the report) and the data documentation page.
 
 ### Report
 
