--- a/06c_code-chunks.qmd
+++ b/06c_code-chunks.qmd
@@ -245,7 +245,7 @@ The data preparation steps are contained in the `data-raw/individuals.R` script.
 
 ## Summary statistics
 
-Prepared data were also subset to columns of interest `stem_diameter`, `height` and `growth_form` and subset to complete case. Liana growth forms were removed.
+Prepared data were also subset to columns of interest `stem_diameter`, `height` and `growth_form` and rows filtered to complete cases. Liana growth forms were removed.
 
 ```{{r}}
 #| label: setup
